add background and img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Shoes</title>
 </head>
 <body>
+    <!-- prima sezione -->
+    <section class="red">
+        <div class="container">
+            <img src="img/01.png" alt="">
+        </div>
+    </section>
+    <section class="green">
+        <div class="container">
+            <img src="img/02.png" alt="">
+        </div>
+    </section>
+    <section class="yellow">
+        <div class="container">
+            <img src="img/03.png" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
