--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css' integrity='sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==' crossorigin='anonymous'/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Shoes</title>
 </head>
@@ -12,16 +14,25 @@
     <section class="red">
         <div class="container">
             <img src="img/01.png" alt="">
+            <div class="title">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </div>
     </section>
     <section class="green">
         <div class="container">
             <img src="img/02.png" alt="">
+            <div class="title">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </div>
     </section>
     <section class="yellow">
         <div class="container">
             <img src="img/03.png" alt="">
+            <div class="title">
+                <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+            </div>
         </div>
     </section>
     
