--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- prima sezione -->
-    <section class="red">
+    <section class="red" id="blue-shoes">
         <div class="container">
             <img src="img/01.png" alt="">
             <div class="title">
@@ -19,7 +19,7 @@
             </div>
         </div>
     </section>
-    <section class="green">
+    <section class="green" id="white-shoes">
         <div class="container">
             <img src="img/02.png" alt="">
             <div class="title">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </section>
-    <section class="yellow">
+    <section class="yellow" id="green-shoes">
         <div class="container">
             <img src="img/03.png" alt="">
             <div class="title">
@@ -35,6 +35,14 @@
             </div>
         </div>
     </section>
+    <nav class="nav-menu">
+        <ul>
+            <li><a href="#blue-shoes">1</a></li>
+            <li><a href="#white-shoes">2</a></li>
+            <li><a href="#green-shoes">3</a></li>
+        </ul>
+    </nav>
+
     
 </body>
 </html>
